log
Thu 04 May 2023 10:57:58 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:25: error: comparison between pointer and integer [-Werror]
   64 |         if(n->sudo[i][j]==NULL){
      |                         ^~
sudoku.c:66:21: error: statement with no effect [-Werror=unused-value]
   66 |           n->sudo[i][j];
      |           ~~~~~~~~~~^~~
sudoku.c:70:17: error: ‘curre’ undeclared (first use in this function)
   70 |     if(is_valid(curre) == 0){
      |                 ^~~~~
sudoku.c:70:17: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:71:14: error: expected expression before ‘List’
   71 |     pushBack(List *list, void *data);
      |              ^~~~
sudoku.c:71:5: error: too few arguments to function ‘pushBack’
   71 |     pushBack(List *list, void *data);
      |     ^~~~~~~~
In file included from test.c:4:
list.h:23:6: note: declared here
   23 | void pushBack(List* list, void* data);
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d21b3ee
Thu 04 May 2023 10:58:14 PM UTC: 
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:25: error: comparison between pointer and integer [-Werror]
   64 |         if(n->sudo[i][j]==NULL){
      |                         ^~
sudoku.c:66:21: error: statement with no effect [-Werror=unused-value]
   66 |           n->sudo[i][j];
      |           ~~~~~~~~~~^~~
sudoku.c:70:17: error: ‘curre’ undeclared (first use in this function)
   70 |     if(is_valid(curre) == 0){
      |                 ^~~~~
sudoku.c:70:17: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:71:14: error: expected expression before ‘List’
   71 |     pushBack(List *list, void *data);
      |              ^~~~
sudoku.c:71:5: error: too few arguments to function ‘pushBack’
   71 |     pushBack(List *list, void *data);
      |     ^~~~~~~~
In file included from test.c:4:
list.h:23:6: note: declared here
   23 | void pushBack(List* list, void* data);
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
033a97d
Thu 04 May 2023 11:04:58 PM UTC: 
 sudoku.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:27: error: expected expression before ‘;’ token
   67 |             n->sudo[i][j]=;
      |                           ^
sudoku.c:69:22: error: expected expression before ‘List’
   69 |             pushBack(List *list, void *data);
      |                      ^~~~
sudoku.c:69:13: error: too few arguments to function ‘pushBack’
   69 |             pushBack(List *list, void *data);
      |             ^~~~~~~~
In file included from test.c:4:
list.h:23:6: note: declared here
   23 | void pushBack(List* list, void* data);
      |      ^~~~~~~~
In file included from test.c:5:
sudoku.c:66:19: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   66 |             Node* nuevo=
      |                   ^~~~~
sudoku.c:60:11: error: unused variable ‘list’ [-Werror=unused-variable]
   60 |     List* list=createList();
      |           ^~~~
sudoku.c: At top level:
sudoku.c:75:5: error: expected identifier or ‘(’ before ‘return’
   75 |     return list;
      |     ^~~~~~
sudoku.c:76:1: error: expected identifier or ‘(’ before ‘}’ token
   76 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:74:5: error: control reaches end of non-void function [-Werror=return-type]
   74 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
c46ed51
Thu 04 May 2023 11:06:51 PM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:31: error: expected expression before ‘Node’
   66 |             Node* nuevo= copy(Node *n)
      |                               ^~~~
sudoku.c:67:13: error: expected ‘,’ or ‘;’ before ‘nuevo’
   67 |             nuevo->sudo[i][j]= cont;
      |             ^~~~~
sudoku.c: At top level:
sudoku.c:76:5: error: expected identifier or ‘(’ before ‘return’
   76 |     return list;
      |     ^~~~~~
sudoku.c:77:1: error: expected identifier or ‘(’ before ‘}’ token
   77 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:5: error: control reaches end of non-void function [-Werror=return-type]
   75 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
e8eeb26
Thu 04 May 2023 11:07:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c:76:5: error: expected identifier or ‘(’ before ‘return’
   76 |     return list;
      |     ^~~~~~
sudoku.c:77:1: error: expected identifier or ‘(’ before ‘}’ token
   77 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:5: error: control reaches end of non-void function [-Werror=return-type]
   75 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
2cad7f0
Thu 04 May 2023 11:08:12 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
8d72ca9
Thu 04 May 2023 11:09:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
370f054
Thu 04 May 2023 11:09:43 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
1ba67cc
Thu 04 May 2023 11:25:55 PM UTC: 
 sudoku.c | 22 ++++++++++++++++------
 1 file changed, 16 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘print_node’:
sudoku.c:37:18: error: unused variable ‘p’ [-Werror=unused-variable]
   37 |     int i,j, k=3,p;
      |                  ^
sudoku.c:37:14: error: unused variable ‘k’ [-Werror=unused-variable]
   37 |     int i,j, k=3,p;
      |              ^
sudoku.c: In function ‘is_valid’:
sudoku.c:56:11: error: ‘p’ undeclared (first use in this function)
   56 |   for(i=0;p<9;p++){
      |           ^
sudoku.c:56:11: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:59:7: error: ‘columnas’ undeclared (first use in this function); did you mean ‘columas’?
   59 |       columnas[j]=0;
      |       ^~~~~~~~
      |       columas
sudoku.c:60:18: error: ‘k’ undeclared (first use in this function)
   60 |         int i=3*(k/3) + (p/3) ;
      |                  ^
sudoku.c:62:22: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   62 |         if(p%3 == 0) return ;
      |                      ^~~~~~
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* n){
      |     ^~~~~~~~
sudoku.c:61:13: error: unused variable ‘j’ [-Werror=unused-variable]
   61 |         int j=3*(k%3) + (p%3) ;
      |             ^
sudoku.c:60:13: error: unused variable ‘i’ [-Werror=unused-variable]
   60 |         int i=3*(k/3) + (p/3) ;
      |             ^
sudoku.c:47:21: error: unused variable ‘columas’ [-Werror=unused-variable]
   47 |   int i,j,filas[9], columas[9];
      |                     ^~~~~~~
sudoku.c:47:11: error: variable ‘filas’ set but not used [-Werror=unused-but-set-variable]
   47 |   int i,j,filas[9], columas[9];
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
2b79efd
